--- a/locales/hu.json
+++ b/locales/hu.json
@@ -5,14 +5,14 @@
     "bug-reports-front": "weboldali kliens / frontend.",
     "chat": "Chat felhasználókkal és fejlesztőkkel",
     "contact": "Kapcsolat:",
-    "contact-language": "Preferred language is English, as we have both international contributors and users.",
+    "contact-language": "Az előnyben részesített nyelv az angol, mivel egyaránt vannak nemzetközi szerkeszőink és felhasználóink.",
     "data": "Adatok:",
     "data-description": "Az alapja az <a href=\"https://www.openstreetmap.org\" target=\"_blank\">OpenStreetMap</a>, és általában naponta frissül (a konkrét időpontok az <a href=\"https://brouter.de/brouter/segments4/\" target=\"_blank\">adatfájlok</a> dátumában olvashatók).",
     "description": "Ez itt a BRouter útvonaltervező motor online szolgáltatása. Az Android alkalmazásról és a további információkról a <a href=\"https://brouter.de/\" target=\"_blank\">brouter.de</a> oldalon olvashat.",
     "details": "<i><a href=\"{{privacyPolicyUrl}}\" target=\"_blank\">Adatvédelmi irányelvek</a></i> \n<i><a href=\"https://github.com/nrenner/brouter-web#credits-and-licenses\" target=\"_blank\">stáblista</a></i>,\n<i><a href=\"https://github.com/nrenner/brouter-web/blob/master/CHANGELOG.md\" target=\"_blank\">változásnapló</a></i> és\n<i><a href=\"https://github.com/nrenner/brouter-web#readme\" target=\"_blank\">további tájékoztatás</a></i> a kliensen.",
     "support": "Általános viták/kérdések, támogatás",
     "title": "Névjegy",
-    "tooltip": "Show more information about BRouter-Web"
+    "tooltip": "További információk megjelenítése a BRouter-Webről"
   },
   "credits": {
     "brouter": "BRouter",
@@ -42,7 +42,7 @@
     "ascend": "Összes szintkülönbség",
     "cost": "Ráfordítás",
     "distance": "Távolság",
-    "elevation-chart": "Toggle elevation chart",
+    "elevation-chart": "Magassági grafikon be-/kikapcsolása",
     "energy-per-100km": "Energia / 100 km",
     "hours": "óra",
     "hours-abbrev": "h",
@@ -54,15 +54,15 @@
     "meter": "méter",
     "meter-abbrev": "m",
     "plain-ascend": "Végpontok közötti szintkülönbség",
-    "stats-info": "Start drawing a route to get stats.",
+    "stats-info": "A statisztika megtekintéséhez kezdjen el egy útvonalat rajzolni.",
     "total-energy": "Teljes energiafelhasználás",
     "travel-time": "Utazási idő"
   },
   "keyboard": {
-    "backspace": "Backspace",
-    "escape": "Escape",
-    "generic-shortcut": "{{action}} ({{key}} key)",
-    "shift": "Shift"
+    "backspace": "Backspace billentyű",
+    "escape": "Escape billentyű",
+    "generic-shortcut": "{{action}} ({{key}} billentyű)",
+    "shift": "Shift billentyű"
   },
   "layers": {
     "add-base": "Alapréteg hozzáadása",
@@ -94,13 +94,13 @@
     "delete-nogo-areas": "Minden elkerülendő terület törlése",
     "delete-pois": "Minden érdekes pont (POI) törlése",
     "delete-route": "Útvonal törlése",
-    "draw-poi-start": "Draw points of interest",
-    "draw-poi-stop": "Stop drawing points of interest",
-    "draw-route-start": "Draw route",
-    "draw-route-stop": "Stop drawing route",
+    "draw-poi-start": "Érdekes pontok (POI-k) rajzolása",
+    "draw-poi-stop": "Érdekes pontok rajzolásának megszakítása",
+    "draw-route-start": "Útvonal rajzolása",
+    "draw-route-stop": "Útvonal rajzolásának megszakítása",
     "enter-poi-name": "Érdekes pont (POI) nevének megadása",
-    "geocoder": "Search",
-    "geocoder-placeholder": "Search…",
+    "geocoder": "Keresés",
+    "geocoder-placeholder": "Keresés",
     "hikebike-hillshading": "Domborzatárnyékolás",
     "hiking": "Túrázás",
     "layer": {
@@ -124,22 +124,22 @@
     "nogo": {
       "cancel": "Elkerülendő terület rajzolásának megszakítása",
       "click-drag": "Kör rajzolása kattintással és húzással",
-      "draw": "Draw circular no-go area",
+      "draw": "Kör alakú elkerülendő terület rajzolása",
       "edit": "Szerkesztés kattintással",
       "help": "&square; = áthelyezés / átméretezés, <span class=\"fa fa-trash-o\"></span> = törlés,<br>a szerkesztés befejezéséhez kattintson a körre"
     },
-    "opacity-slider": "Set transparency of route track and markers",
-    "opacity-slider-shortcut": "{{action}}\n(Hold {{key}} key to mute temporarily)",
+    "opacity-slider": "Útvonal és jelölők átlátszóságának beállítása",
+    "opacity-slider-shortcut": "{{action}}\n(Időszakos elnémítás a {{key}} billentyűt lenyomva tartásával)",
     "preview": "Előnézet",
     "privacy": "Adatvédelem",
     "reverse-route": "Útvonal megfordítása",
     "route-quality-altitude": "Magasság kódolása",
     "route-quality-cost": "Ráfordítás kódolása",
     "route-quality-incline": "Lejtés kódolása",
-    "route-quality-shortcut": "{{action}} ({{key}} key to toggle)",
+    "route-quality-shortcut": "{{action}} (be-/kikapcsolás: {{key}} billentyű)",
     "strava-biking": "Strava motoros útvonalszakaszok megjelenítése",
     "strava-running": "Strava futó útvonalszakaszok megjelenítése",
-    "strava-shortcut": "{{action}}\n({{key}} key to toggle layer, click to reload for current area)",
+    "strava-shortcut": "{{action}}\n({{key}} billentyű a réteg be-/kikapcsolásához, kattintás az adott terület újratöltéséhez)",
     "zoomInTitle": "Nagyítás",
     "zoomOutTitle": "Kicsinyítés"
   },
@@ -155,12 +155,12 @@
       "third": "3. alternatíva"
     },
     "export": "Exportálás",
-    "export-tooltip": "Export route",
+    "export-tooltip": "Útvonal exportálása",
     "load": {
-      "nogos": "Load no-go areas",
+      "nogos": "Elkerülendő területek betöltése",
       "title": "Betöltés",
-      "tooltip": "{{tracksAction}} ({{tracksKey}} key)\n{{nogosAction}} ({{nogosKey}})",
-      "tracks": "Load tracks"
+      "tooltip": "{{tracksAction}} ({{tracksKey}} billentyű)\n{{nogosAction}} ({{nogosKey}})",
+      "tracks": "Nyomvonalak betöltése"
     },
     "profile": {
       "car-eco": "Személyautó (gazdaságos)",
@@ -184,36 +184,36 @@
       "vm-forum-liegerad-schnell": "Rekumbens kerékpár (gyors)",
       "vm-forum-velomobil-schnell": "Velomobil (aerodinamikus kerékpár, gyors)"
     },
-    "profile-tooltip": "\n({{key}} key to switch)"
+    "profile-tooltip": "\n({{key}} billentyűvel váltás)"
   },
   "sidebar": {
     "analysis": {
       "header": {
-        "highway": "Highway",
-        "smoothness": "Smoothness",
-        "surface": "Surface"
+        "highway": "Út",
+        "smoothness": "Simaság",
+        "surface": "Felület"
       },
       "table": {
-        "category": "Category",
-        "length": "Length",
-        "total_known": "Total Known:",
-        "unknown": "Unknown"
+        "category": "Kategória",
+        "length": "Hossz",
+        "total_known": "Összesen ismert:",
+        "unknown": "Ismeretlen"
       },
-      "title": "Analysis",
-      "tooltip": "Analyse route"
+      "title": "Elemzés",
+      "tooltip": "Útvonal elemzése"
     },
     "customize-profile": {
       "title": "Profil testreszabása",
-      "tooltip": "Customize profile"
+      "tooltip": "Profil testreszabása"
     },
     "data": {
       "sync-map": "Térkép szinkronizálása",
       "title": "Adatok",
-      "tooltip": "Show detailed route data table"
+      "tooltip": "Részletes útvonaladat-táblázat megjelenítése"
     },
     "itinerary": {
       "title": "Útiterv",
-      "tooltip": "Show itinerary"
+      "tooltip": "Útiterv megjelenítése"
     },
     "layers": {
       "category": {
@@ -240,7 +240,7 @@
         "type": "Típus"
       },
       "title": "Rétegek",
-      "tooltip": "Select layers"
+      "tooltip": "Rétegek kijelölése"
     },
     "profile": {
       "apply": "Alkalmaz",
@@ -251,19 +251,19 @@
       "placeholder": "Ide írhatja egyedi profilját",
       "profile": "Profil"
     },
-    "tab-tooltip": "{{action}}\n({{toggleKey}} key to toggle, {{switchKey}} to switch to next tab)"
+    "tab-tooltip": "{{action}}\n({{toggleKey}} billentyűvel be-/kikapcsolás, {{switchKey}} billentyűvel váltás a következő fülre)"
   },
   "title": "BRouter webkliens",
   "trackasroute": {
-    "explainpoi": "(show waypoints as POI's)",
-    "explaintracklayer": "(show Track as separate Layer)",
-    "file": "Trackfile",
-    "fuzziness": "fuzzines",
-    "pleasewait": "Please wait!",
-    "showpois": "POI's",
-    "title": "Load Track as Route",
-    "tracklayer": "Track Layer",
-    "tuning": "Tuning"
+    "explainpoi": "(útpontok megjelenítése érdekes pontként [POI-ként])",
+    "explaintracklayer": "(nyomvonal megjelenítés különálló rétegként)",
+    "file": "Nyomvonalfájl",
+    "fuzziness": "homályosság",
+    "pleasewait": "Kérjük, várjon",
+    "showpois": "Érdekes pontok (POI-k)",
+    "title": "Nyomvonal betöltése útvonalként",
+    "tracklayer": "Nyomvonal rétege",
+    "tuning": "Hangolás"
   },
   "warning": {
     "cannot-get-route": "Hiba történt az útvonal URL-jének beolvasásakor",
