--- a/locales/en.json
+++ b/locales/en.json
@@ -258,7 +258,7 @@
     "explainpoi": "(show waypoints as POI's)",
     "explaintracklayer": "(show Track as separate Layer)",
     "file": "Trackfile",
-    "fuzziness": "fuzzines",
+    "fuzziness": "fuzziness",
     "pleasewait": "Please wait!",
     "showpois": "POI's",
     "title": "Load Track as Route",
