--- a/locales/de.json
+++ b/locales/de.json
@@ -94,6 +94,8 @@
     "delete-nogo-areas": "Alle No-go-Areas löschen",
     "delete-pois": "Alle POI löschen",
     "delete-route": "Route löschen",
+    "draw-circlego-start": "Draw limited {{radius}}km go-to zone",
+    "draw-circlego-stop": "Stop drawing limited {{radius}}km go-to zone",
     "draw-poi-start": "POI einzeichnen",
     "draw-poi-stop": "Einzeichnen der POI beenden",
     "draw-route-start": "Route zeichnen",
@@ -267,6 +269,8 @@
   },
   "warning": {
     "cannot-get-route": "Fehler beim Abrufen der Routen-URL",
+    "invalid-route-from": "Start marker is too far from a route.",
+    "invalid-route-to": "Destination marker is too far from a route.",
     "no-response": "Keine Antwort vom Server",
     "no-route-found": "Fehler: kann für angegebene Punkte keine Route finden. Vielleicht die Punkte näher an Straßen verschieben?",
     "profile-error": "Profil-Fehler: keine oder leere Antwort vom Server",
