--- a/locales/fr.json
+++ b/locales/fr.json
@@ -3,14 +3,14 @@
     "bug-reports": "Rapporter un problème ou une amélioration :",
     "bug-reports-back": "serveur, moteur de routage, appli Android, profils, site brouter.de ;",
     "bug-reports-front": "client web.",
-    "chat": "Discuter avec d'autres utilisateurs et développeurs",
+    "chat": "Discuter avec d'autres utilisateurs et développeurs ;",
     "contact": "Contact :",
-    "contact-language": "La langue privilégiée est l'anglais, car il y a des contributeurs et des utilisateurs du monde entier.",
+    "contact-language": "L'anglais est à privilégier pour les échanges, car les développeurs et utilisateurs viennent du monde entier.",
     "data": "Données :",
     "data-description": "Les données reposent sur <a href=\"https://www.openstreetmap.org\" target=\"_blank\">OpenStreetMap</a>. La mise à jour est généralement quotidienne, voir <a href=\"https://brouter.de/brouter/segments4/\" target=\"_blank\">les fichiers de données</a>. ",
     "description": "Service web pour le moteur de routage BRouter. Pour l'appli Android et de plus amples informations, voir <a href=\"https://brouter.de/\" target=\"_blank\">brouter.de</a>.",
     "details": "<i><a href=\"{{privacyPolicyUrl}}\" target=\"_blank\">Respect de la vie privée</a></i>, \n<i><a href=\"https://github.com/nrenner/brouter-web#credits-and-licenses\" target=\"_blank\">Crédits</a></i>,\n<i><a href=\"https://github.com/nrenner/brouter-web/blob/master/CHANGELOG.md\" target=\"_blank\">Changements</a></i> et\n<i><a href=\"https://github.com/nrenner/brouter-web#readme\" target=\"_blank\">plus d'infos</a></i> sur le client web.",
-    "support": "Discussions/Questions générales, support ;",
+    "support": "Discussions et questions générales, support ;",
     "title": "À propos",
     "tooltip": "Afficher plus d'informations à propos de BRouter-Web"
   },
@@ -95,7 +95,7 @@
     "delete-pois": "Supprimer tous les points d'intérêt ",
     "delete-route": "Supprimer l'itinéraire",
     "draw-circlego-start": "Ajouter une zone limite de {{radius}} km",
-    "draw-circlego-stop": "Arrêter l'ajout d'une zone limit de {{radius}} km",
+    "draw-circlego-stop": "Arrêter l'ajout d'une zone limite de {{radius}} km",
     "draw-poi-start": "Ajouter des points d'intérêt",
     "draw-poi-stop": "Arrêter l'ajout de points d'intérêt",
     "draw-route-start": "Dessiner l'itinéraire",
@@ -269,6 +269,8 @@
   },
   "warning": {
     "cannot-get-route": "Erreur lors de la réception de l'itinéraire",
+    "invalid-route-from": "Le départ est trop éloigné d'une route.",
+    "invalid-route-to": "L'arrivée est trop éloignée d'une route.",
     "no-response": "aucune réponse du serveur",
     "no-route-found": "Erreur : impossible de trouver un itinéraire correspondant aux points donnés. Essayez peut-être de rapprocher les points des routes ?",
     "profile-error": "Erreur de profil : pas de réponse ou réponse invalide du serveur",
