--- a/locales/en.json
+++ b/locales/en.json
@@ -35,6 +35,7 @@
     "format_kml": "KML",
     "include": "Include",
     "include_waypoints": "Waypoints",
+    "qrcode": "",
     "route-from-to": "{{from}} -> {{to}} ({{distance}}km)",
     "route-loop": "{{from}} ({{distance}}km)",
     "title": "Export route",
@@ -190,6 +191,16 @@
       "vm-forum-velomobil-schnell": "Velomobile (fast)"
     },
     "profile-tooltip": "\n({{key}} key to switch)"
+  },
+  "qrcode": {
+    "description-long": "",
+    "introduction": "",
+    "large": "",
+    "medium": "",
+    "msg-too-long": "",
+    "msg-unknown-error": "",
+    "small": "",
+    "title": ""
   },
   "sidebar": {
     "analysis": {
