--- a/locales/en.json
+++ b/locales/en.json
@@ -283,7 +283,7 @@
     "upload-error": "Upload error: {{error}}"
   },
   "whatsnew": {
-    "title": "What's new?",
-    "new-version": "A new version was released since your last visit. Click <a href='.' data-toggle='modal' data-target='#whatsnew'>here</a> to see what's new!"
+    "new-version": "A new version was released since your last visit. Click <a href='.' data-toggle='modal' data-target='#whatsnew'>here</a> to see what's new!",
+    "title": "What's new?"
   }
 }
