--- a/locales/pt-BR.json
+++ b/locales/pt-BR.json
@@ -1,49 +1,49 @@
 {
   "about": {
-    "bug-reports": "Bug reports and feature requests:",
-    "bug-reports-back": "server / backend, routing engine, Android app, profiles, brouter.de site",
+    "bug-reports": "Relatórios de bugs e solicitações de recursos:",
+    "bug-reports-back": "servidor / back-end, mecanismo de roteamento, aplicativo Android, perfis, site brouter.de",
     "bug-reports-front": "web client / frontend.",
-    "chat": "Chat with users and developers",
-    "contact": "Contacto:",
-    "contact-language": "Preferred language is English, as we have both international contributors and users.",
-    "data": "Datos:",
+    "chat": "Converse com usuários e desenvolvedores",
+    "contact": "Contato:",
+    "contact-language": "O idioma preferido é o inglês, pois temos colaboradores e usuários internacionais.",
+    "data": "Data:",
     "data-description": "This is based on <a href=\"https://www.openstreetmap.org\" target=\"_blank\">OpenStreetMap</a>. It is usually updated daily, see dates of <a href=\"https://brouter.de/brouter/segments4/\" target=\"_blank\">data files</a>.",
     "description": "Online service of the BRouter routing engine. For the offline Android app and more information see <a href=\"https://brouter.de/\" target=\"_blank\">brouter.de</a>",
     "details": "<i><a href=\"{{privacyPolicyUrl}}\" target=\"_blank\">Privacy Policy</a></i>, \n<i><a href=\"https://github.com/nrenner/brouter-web#credits-and-licenses\" target=\"_blank\">Credits</a></i>,\n<i><a href=\"https://github.com/nrenner/brouter-web/blob/master/CHANGELOG.md\" target=\"_blank\">Changelog</a></i> and\n<i><a href=\"https://github.com/nrenner/brouter-web#readme\" target=\"_blank\">more info</a></i> on the client.",
-    "support": "General discussions/questions, support",
-    "title": "Sobre nós",
-    "tooltip": "Show more information about BRouter-Web"
+    "support": "Discussões/perguntas gerais, suporte",
+    "title": "Sobre",
+    "tooltip": "Mostrar mais informações sobre o BRouter-Web"
   },
   "credits": {
     "boundaries": "Administrative Boundaries: <a href=\"https://osm-boundaries.com\" target=\"_blank\">OSM-Boundaries</a>, <a href=\"https://overpass-api.de/\" target=\"_blank\">Overpass API</a>",
     "brouter": "BRouter",
     "brouter-license": "<a target=\"_blank\" href=\"https://brouter.de/brouter\">BRouter</a> &copy; Arndt Brenschede",
-    "elevation-data": "Elevation data",
+    "elevation-data": "Dados de elevação",
     "esri-license": "<a target=\"_blank\" href=\"http://goto.arcgisonline.com/maps/World_Imagery\">World Imagery</a> &copy; <a target=\"_blank\" href=\"https://www.esri.com/\">Esri</a>, sources: Esri, DigitalGlobe, Earthstar Geographics, CNES/Airbus DS, GeoEye, USDA FSA, USGS, Getmapping, Aerogrid, IGN, IGP, and the GIS User Community",
     "esri-tiles": "Esri World Imagery",
-    "map-data": "Map data",
-    "map-tiles": "Map tiles",
+    "map-data": "Dados do mapa",
+    "map-tiles": "Blocos de mapa",
     "nominatim": "Search by <a href=\"https://wiki.openstreetmap.org/wiki/Nominatim\" target=\"_blank\" data-i18n=\"credits.nominatim\">Nominatim</a>",
     "openstreetmap": "&copy; <a target=\"_blank\" href=\"https://www.openstreetmap.org/copyright\" >OpenStreetMap contributors</a> under <a target=\"_blank\" href=\"https://opendatacommons.org/licenses/odbl/\" >ODbL</a>",
-    "title": "Credits"
+    "title": "Créditos"
   },
   "export": {
-    "format": "Format",
+    "format": "Formato",
     "format_csv": "CSV",
     "format_geojson": "GeoJSON",
     "format_gpx": "GPX",
     "format_kml": "KML",
-    "include": "Include",
+    "include": "Incluir",
     "include_waypoints": "Waypoints",
     "route-from-to": "{{from}} -> {{to}} ({{distance}}km)",
     "route-loop": "{{from}} ({{distance}}km)",
-    "title": "Export route",
-    "trackname": "Name"
+    "title": "Exportar rota",
+    "trackname": "Nome"
   },
   "footer": {
     "ascend": "Ascend",
     "cost": "Cost",
-    "distance": "Distance",
+    "distance": "Distância",
     "elevation-chart": "Toggle elevation chart",
     "energy-per-100km": "Energy per 100 km",
     "hours": "hours",
