--- a/locales/fr.json
+++ b/locales/fr.json
@@ -15,7 +15,7 @@
     "tooltip": "Afficher plus d'informations à propos de BRouter-Web"
   },
   "credits": {
-    "boundaries": "Administrative Boundaries: <a href=\"https://osm-boundaries.com\" target=\"_blank\">OSM-Boundaries</a>, <a href=\"https://overpass-api.de/\" target=\"_blank\">Overpass API</a>",
+    "boundaries": "limites administratives: <a href=\"https://osm-boundaries.com\" target=\"_blank\">OSM-Boundaries</a>, <a href=\"https://overpass-api.de/\" target=\"_blank\">Overpass API</a>",
     "brouter": "BRouter",
     "brouter-license": "<a target=\"_blank\" href=\"https://brouter.de/brouter\">BRouter</a> &copy; Arndt Brenschede",
     "elevation-data": "Données d'élévation",
@@ -25,7 +25,7 @@
     "map-tiles": "Tuiles de carte",
     "nominatim": "Recherche par <a href=\"https://wiki.openstreetmap.org/wiki/Nominatim\" target=\"_blank\" data-i18n=\"credits.nominatim\">Nominatim</a>",
     "openstreetmap": "&copy; <a target=\"_blank\" href=\"https://www.openstreetmap.org/copyright\" >contributeurs OpenStreetMap</a> sous <a target=\"_blank\" href=\"https://opendatacommons.org/licenses/odbl/\" >ODbL</a>",
-    "title": "Credits"
+    "title": "Crédits"
   },
   "export": {
     "format": "Format",
@@ -55,7 +55,7 @@
     "mean-cost-factor": "Facteur coût moyen",
     "meter": "mètres",
     "meter-abbrev": "m",
-    "plain-ascend": "global",
+    "plain-ascend": "faux plat",
     "stats-info": "Commencer un itinéraire pour voir ses stats.",
     "total-energy": "Énergie totale",
     "travel-time": "Temps de trajet"
@@ -132,7 +132,7 @@
       "edit": "Cliquer pour éditer",
       "help": "&square; = déplacer / redimensionner, <span class=\"fa fa-trash-o\"></span> = supprimer,<br>cliquer sur le cercle pour arrêter l'édition"
     },
-    "not-applicable-here": "not applicable here",
+    "not-applicable-here": "pas applicable ici",
     "opacity-slider": "Définie l'opacité de l'itinéraire et des marqueurs",
     "opacity-slider-shortcut": "{{action}}\n(Maintenir la touche {{key}} pour masquer temporairement)",
     "preview": "Prévisualiser",
@@ -281,5 +281,9 @@
     "temporary-profile": "<strong>Note :</strong> Les profils personnalisés téléversés ne sont disponibles que temporairement sur le serveur.<br/>Merci de sauvegarder votre profil sur votre ordinateur.",
     "tracks-load-error": "Impossible de charger les traces : {{error}}",
     "upload-error": "Erreur d'envoi : {{error}}"
+  },
+  "whatsnew": {
+    "new-version": "Une nouvelle version est disponible depuis votre dernière visite. Cliquez <a href='.' data-toggle='modal' data-target='#whatsnew'>ici</a> pour voir les nouveautés !",
+    "title": "Nouveautés"
   }
 }
