--- a/locales/is.json
+++ b/locales/is.json
@@ -281,5 +281,9 @@
     "temporary-profile": "<strong>Athugaðu:</strong> Innsend sérsniðin notkunarsnið eru aðeins geymd tímabundið á netþjóninum.<br/>Vistaðu breytingarnar þínar á tölvuna þína.",
     "tracks-load-error": "Villa við að hlaða inn ferlum: {{error}}",
     "upload-error": "Villa í innsendingu: {{error}}"
+  },
+  "whatsnew": {
+    "new-version": "A new version was released since your last visit. Click <a href='.' data-toggle='modal' data-target='#whatsnew'>here</a> to see what's new!",
+    "title": "What's new?"
   }
 }
